src/app.scss
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");



:root {
    --clr-dark: #252525;
    --clr-light: #cfcfcf;
    --bg-light: #f6f6f6;
    --bg-white: white;

    --priority-default: #eeeeee;
    --priority-normal: #4879ff;
    --priority-important: #fbc54f;
    --priority-urgent: #ff5582;

    --fs-default: 0.5rem;
    --fs-500: 0.75rem;
    --fs-600: 0.95rem;
    --fs-700: 1rem;
    --fs-800: 1.25rem;
    --fs-900: 1.5rem;
}

/* Box Sizing */
*,
*::before,
*::after {
    box-sizing: border-box;
}

@media screen and (min-width: 40em) {
    :root {
        --fs-default: 1rem;
        --fs-500: 1.15rem;
        --fs-600: 1.75rem;
        --fs-700: 1.85rem;
        --fs-800: 2rem;
        --fs-900: 2.5rem;
    }
}

/* Margins */

body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
    margin: 0;
}

/* Visuals */

button {
    border: none;
    outline: none;
}

a {
    text-decoration: none;
}

ul,
li {
    list-style-type: none;
}

input,
button,
textarea,
select {
    font: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    font-weight: 400;
}

/* Accessibility */
@media (prefers-reduced-motion: reduce) {

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

/* Utility Classes */

.flex {
    display: flex;
}

.grid {
    display: grid;
}

body {
    font-family: "Open Sans", sans-serif;
    color: var(--clr-dark);
    height: 100vh;
    overflow-x: hidden;
}

.flow>*+* {
    margin-top: 1rem;
}

.thin {
    font-weight: 300;
}

.text-input {
    font-family: 'Open Sans', sans-serif !important;
    border: unset;
    outline: unset;
}

.medium {
    font-weight: 600;
}

.bold {
    font-weight: 700;
}

.fs-default {
    font-size: var(--fs-default);
}

.fs-500 {
    font-size: var(--fs-500);
}

.fs-600 {
    font-size: var(--fs-600);
}

.fs-800 {
    font-size: var(--fs-800);
}

.fs-900 {
    font-size: var(--fs-900);
}

.text-light {
    color: var(--clr-light);
}

.bg-white {
    background-color: var(--bg-white);
}

